--- a/modules/delivery/.env
+++ b/modules/delivery/.env
@@ -1,5 +1,5 @@
 DB_URL=jdbc:postgresql://localhost:5439/users
-DB_SCHEMA=orders
+DB_SCHEMA=delivery
 DB_USER=test
 DB_PASSWORD=test
 CONDUCTOR_AUTH_KEY=spk39518fc1b-def0-11ef-aeb1-c259128d4f69
