--- a/modules/delivery/pom.xml
+++ b/modules/delivery/pom.xml
@@ -5,9 +5,9 @@
     <packaging>jar</packaging>
 
     <groupId>ru.otus.homework.vsamarin</groupId>
-    <artifactId>saga</artifactId>
+    <artifactId>delivery</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>saga</name>
+    <name>delivery</name>
 
     <properties>
         <java.version>21</java.version>
