--- a/k8s/delivery/deployment.yaml
+++ b/k8s/delivery/deployment.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: orders
+  name: delivery
   namespace: homework
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: orders
+      app: delivery
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -16,39 +16,39 @@ spec:
   template:
     metadata:
       labels:
-        app: orders
+        app: delivery
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8000"
         prometheus.io/path: "/actuator/prometheus"
     spec:
       containers:
-        - name: orders
-          image: vsamarin/orders:1.1.1
+        - name: delivery
+          image: vsamarin/delivery:1.0.0
           imagePullPolicy: Always
           ports:
             - name: web
-              containerPort: 8000
+              containerPort: 8006
           env:
             - name: DB_URL
               valueFrom:
                 configMapKeyRef:
-                  name: orders-config
+                  name: delivery-config
                   key: db.url
             - name: DB_USER
               valueFrom:
                 configMapKeyRef:
-                  name: orders-config
+                  name: delivery-config
                   key: db.user
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: orders-secret
+                  name: delivery-secret
                   key: db.password
             - name: CONTEXT_PATH
-              value: /orders
+              value: /delivery
             - name: DB_SCHEMA
-              value: orders
+              value: delivery
             - name: CONDUCTOR_SERVER_URL
               value: https://developer.orkescloud.com/api
             - name: CONDUCTOR_AUTH_KEY
