--- a/k8s/delivery/service.yaml
+++ b/k8s/delivery/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: orders
+  name: delivery
   namespace: homework
   annotations:
     prometheus.io/scrape: "true"
@@ -9,9 +9,9 @@ metadata:
     prometheus.io/path: "/actuator/prometheus"
 spec:
   selector:
-    app: orders
+    app: delivery
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8000
+      port: 8086
+      targetPort: 8006
   type: ClusterIP
