--- a/k8s/warehouse/ingress.yaml
+++ b/k8s/warehouse/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: orders
+  name: warehouse
   namespace: homework
   annotations:
     prometheus.io/scrape: "true"
@@ -10,7 +10,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
 #    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 #    nginx.ingress.kubernetes.io/rewrite-target: /
-#    nginx.ingress.kubernetes.io/x-forwarded-prefix: /orders
+#    nginx.ingress.kubernetes.io/x-forwarded-prefix: /warehouse
 spec:
   ingressClassName: nginx
   rules:
@@ -20,7 +20,7 @@ spec:
           - pathType: Prefix
             backend:
               service:
-                name: orders
+                name: warehouse
                 port:
-                  number: 8080
-            path: /orders
+                  number: 8084
+            path: /warehouse
